Bug 167893 - Presentation mode adds "random" visual artefacts to box shapes/groups
Summary: Presentation mode adds "random" visual artefacts to box shapes/groups
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Slide-Show
  Show dependency treegraph
 
Reported: 2025-08-10 23:29 UTC by Gerald Pfeifer
Modified: 2025-08-19 23:11 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Bug document (ODP) (45.53 KB, application/vnd.oasis.opendocument.presentation)
2025-08-10 23:29 UTC, Gerald Pfeifer
Details
Visual comparison presentation mode (back, larger) - edit mode (lower left, smaller) (314.63 KB, image/png)
2025-08-10 23:35 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2025-08-10 23:29:59 UTC
Created attachment 202272 [details]
Bug document (ODP)

1. Open the attached bug document.
2. Invoke presentation mode.
3. Observe how the boxes render quite differently between edit mode
   and presentation mode. Looks like "random"/bad data being used.

This is a regression between

   Version: 25.8.0.1.0+ (X86_64) / LibreOffice Community
   Build ID: 5136f42ad575a11f5955bd8289bbc10425944b33
   CPU threads: 12; OS: Linux 6.15; UI render: default; VCL: gtk3

and

   Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
   Build ID: ccb3362a71f88213615bd39bd819ab8ec20d86cc
   CPU threads: 12; OS: Linux 6.15; UI render: default; VCL: gtk3

(The bug document is a simplified version of attachment #184643 [details] from
bug #153011. That one was PPTX, this is now ODP.)
Comment 1 Gerald Pfeifer 2025-08-10 23:35:02 UTC
Created attachment 202273 [details]
Visual comparison presentation mode (back, larger) - edit mode (lower left, smaller)
Comment 2 Jussi Suominen 2025-08-11 20:54:42 UTC
I did bibisecting with repository bibisect-win64-26.2. I was unable to reproduce the bug with any commit. I tested the bug by opening the attached bug document and invoked presentation mode (Slideshow | Start from First Slide). So I think I did the correct steps to reproduce the bug but if I did something wrong please let me know. I did not notice difference between edit and presentation mode.

I wonder if this bug might be specific to operating system and if it occurs in Linux but not in Windows (I tested on Windows).
Comment 3 Gerald Pfeifer 2025-08-12 12:57:51 UTC
I can consistently reproduce - and also that it is fine with 25.8.

The latter indicates it's not simply my system, rather either
LibreOffice 26.2-alpha or an interplay of that with my system.


Another interesting data point: The slide (and others where I see 
similar effects) all appear fine in the presenter console; it's only
the actual presentation view that's broken.
Comment 4 Gerald Pfeifer 2025-08-12 12:59:21 UTC
(In reply to Jussi Suominen from comment #2)
> I tested the bug by opening the attached bug document and invoked
> presentation mode (Slideshow | Start from First Slide). So I think
> I did the correct steps to reproduce

Yes, you did; thank you!

> I wonder if this bug might be specific to operating system and if 
> it occurs in Linux but not in Windows (I tested on Windows).

It might be Linux-specific and in fact specific to some configuration
or library/version there. :-(
Comment 5 Saburo 2025-08-15 01:57:21 UTC
bibisected with linux-64-26.2 (openSUSE+GNOME)
Once in a while
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 09298d001e98ed494ecb1df5cb563b081da050e8
CPU threads: 4; OS: Linux 6.16; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded

commit 09298d001e98ed494ecb1df5cb563b081da050e8
author	Noel Grandin <noelgrandin@gmail.com>	Tue Jul 29 19:59:53 2025 +0200
committer	Noel Grandin <noelgrandin@gmail.com>	Thu Aug 07 13:09:57 2025 +0200

BitmapEx->Bitmap in bitmapExFromXBitmap

now that Bitmap can handle transparency

Change-Id: Id87889a0e5ca0a3398f9baceee3474369eb0f7aa
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188539

***
For reference
bibisected with linux-64-26.2 (ubuntu24.04 SAL_USE_VCLPLUGIN=gen)
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2939f4b52d96ef0bd76896dc857f43d4de402d25
CPU threads: 4; OS: Linux 6.14; UI render: default; VCL: x11
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded

commit 2939f4b52d96ef0bd76896dc857f43d4de402d25
author	Noel Grandin <noel.grandin@collabora.co.uk>	Tue Aug 05 08:26:05 2025 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Tue Aug 05 12:11:50 2025 +0200
tree 8b3959ea3532e21a391405b226411b94fb009e68
parent c2e99a25028cc0d215f7bb50b08b5a25babce26b [diff]

BitmapEx->Bitmap in CanvasBitmap

which reveals that the 32-bit code in CanvasBitmap is pretty
broken.

Change-Id: Ic575ac07b844ef591dae64259e29c25db985efeb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188932
Comment 6 Commit Notification 2025-08-18 17:09:29 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/eb4394e3460932011940a1e3c03d5d67d7f45885

tdf#167893 and tdf#167876 weird effects in slideshow

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Gerald Pfeifer 2025-08-19 07:05:52 UTC
Yeah, last night's snapshot addresses this:

   Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
   Build ID: fd48da7236f26d9d8d16759546a5c860f91b82de
   CPU threads: 12; OS: Linux 6.15; UI render: default; VCL: gtk3

Thank you for addressing this so swiftly, Noel!